# secha-schedule-saver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.toml
app/: CMakeLists.txt  main.cpp
app/AuthServer/: CMakeLists.txt  main.cpp
app/bot/: CMakeLists.txt
include/: Auth.hpp  AuthServer.hpp  CalendarConnector.hpp  Config.hpp  MessageListeners.hpp  Requests.hpp  Schedule.hpp  ScheduleSaverBot.hpp  WebServer.hpp
src/: Auth.cpp  AuthServer.cpp  CMakeLists.txt  Config.cpp  ScheduleSaver.cpp  ScheduleSaverBot.cpp  WebServer.cpp
src/GCalendar/python/: connector.py
src/WebScraper/: schedule.html  schedule_scraper.jl
src/web_root/: authSuccess.css  authSuccess.html  schedule.html
test/: CMakeLists.txt  ConfigTest.cpp  ScheduleTest.cpp
